--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "^11.10.4",
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.10.6",
+    "@mui/lab": "^5.0.0-alpha.103",
     "@mui/material": "^5.10.8",
     "@mui/x-data-grid": "^5.17.5",
     "@reduxjs/toolkit": "^1.8.5",
@@ -30,7 +31,7 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-    },
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
